Fixed pom to build jar with mainclass et in manifest